--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 networks:
   catamongo.net:
     driver: bridge
@@ -10,14 +8,14 @@ services:
         context: build
         dockerfile: 8.3-cli.Dockerfile
     ports:
-      - "12080:80"
+      - "8080:80" # 12080
       - "12443:443"
     volumes:
       - ./app:/var/php
-    working_dir: /var/php
+    working_dir: /var/php/src
     networks:
       - catamongo.net
-    command: php -S 0.0.0.0:80 -t /var/php/public
+    command: sh -c "composer install && php -S 0.0.0.0:80 -t /var/php/public"
 
   ################################################
   # mongodb & mongo-express
