--- a/app/src/composer.json
+++ b/app/src/composer.json
@@ -1,6 +1,7 @@
 {
   "require" : {
-    "mongodb/mongodb": "^1.20",
-    "fakerphp/faker": "^1.23"
+    "mongodb/mongodb": "^2.0",
+    "fakerphp/faker": "^1.23",
+    "ext-mongodb": "*"
   }
 }
